<resources>
    <string name="app_name">Тестирование</string>
    <string name="request">Запрос</string>
    <string name="your_mark">Ваша оценка:</string>
    <string name="see_wrongs">Мои ошибки</string>
    <string name="done">Готово</string>
    <string name="start_menu">ВПЕРЁД</string>
    <string name="first_name">Имя</string>
    <string name="second_name">Фамилия</string>
    <string name="search_test">Название</string>
    <string name="next_question">Следующий</string>
    <string name="none_description" />
    <string name="scores">Баллы</string>
    <string name="hello">Здравствуй!</string>
    <string name="forward">ВПЕРЁД</string>
    <string name="log_out">Log out</string>
    <string name="my_tests">МОИ ТЕСТЫ</string>
    <string name="find_tests">НАЙТИ ТЕСТ</string>
    <string name="create_test">СОЗДАТЬ ТЕСТ</string>
    <string name="new_question">Новый вопрос</string>
    <string name="_00">00</string>
    <string name="colon">:</string>
    <string name="timer">Таймер</string>
    <string name="anonymity">Анонимно</string>
    <string name="show_wrongs">Показывать ошибки</string>
    <string name="_25">25%</string>
    <string name="ready">Готово</string>
</resources>
