<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textSize="150sp"
        android:textColor="@color/red"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/state"
        android:layout_centerHorizontal="true"
        android:text="@string/your_mark"
        android:textSize="15sp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/seeResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/see_wrongs"
        android:layout_below="@id/state"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        style="@style/Base.TextAppearance.AppCompat.Button.MyButtonStyle"/>
    <TextView
        android:id="@+id/backToMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_below="@id/seeResults"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        style="@style/Base.TextAppearance.AppCompat.Button.MyButtonStyle"/>
</RelativeLayout>
