<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.petro.newtesting.TestSettings">
    <TextView
        android:id="@+id/complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/ready"
        style="@style/Base.TextAppearance.AppCompat.Button.MyButtonStyle"
        android:layout_marginBottom="10dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/complete"
        android:overScrollMode="never"
        android:layout_margin="5dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp">
            <TextView
                android:id="@+id/entry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Оценка начинается с:" />
            <RelativeLayout
                android:id="@+id/five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/entry">
                <TextView
                    android:id="@+id/fiveMark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5:"
                    android:textSize="18dp"/>
                <SeekBar
                    android:id="@+id/fifthSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_toRightOf="@id/fiveMark"
                    android:layout_marginLeft="15dp"
                    android:max="100"
                    android:progress="75"/>
                <TextView
                    android:id="@+id/fifthDecorator"
                    android:layout_alignStart="@id/fifthSeekBar"
                    android:layout_alignEnd="@id/fifthSeekBar"
                    android:textSize="12dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fifthSeekBar"
                    android:text="75%"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/five"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/fourMark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4:"
                    android:textSize="18dp"/>
                <SeekBar
                    android:id="@+id/fourthSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_toRightOf="@id/fourMark"
                    android:layout_marginLeft="15dp"
                    android:max="100"
                    android:progress="50"/>
                <TextView
                    android:id="@+id/fourthDecorator"
                    android:layout_alignStart="@id/fourthSeekBar"
                    android:layout_alignEnd="@id/fourthSeekBar"
                    android:textSize="12dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/fourthSeekBar"
                    android:text="50%"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/four"
                android:layout_marginTop="10dp">
                <TextView
                    android:id="@+id/threeMark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3:"
                    android:textSize="18dp"/>
                <SeekBar
                    android:id="@+id/thirdSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:layout_toRightOf="@id/threeMark"
                    android:layout_marginLeft="15dp"
                    android:max="100"
                    android:progress="25"/>
                <TextView
                    android:id="@+id/thirdDecorator"
                    android:layout_alignStart="@id/thirdSeekBar"
                    android:layout_alignEnd="@id/thirdSeekBar"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/thirdSeekBar"
                    android:text="@string/_25"/>
            </RelativeLayout>
            <CheckBox
                android:id="@+id/showWrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/three"
                android:text="@string/show_wrongs"/>
            <CheckBox
                android:id="@+id/anonymity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/showWrong"
                android:text="@string/anonymity"/>
            <CheckBox
                android:id="@+id/set_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/anonymity"
                android:text="@string/timer"/>
            <RelativeLayout
                android:id="@+id/layout_set_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/set_timer"
                android:gravity="center"
                android:visibility="gone">
                <TextView
                    android:id="@+id/help_test_setting_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/colon"
                    android:textSize="25sp"/>
                <EditText
                    android:id="@+id/timer_minutes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/help_test_setting_view"
                    android:inputType="number"
                    android:gravity="center"
                    android:hint="@string/_00"
                    android:maxLength="2"/>
                <EditText
                    android:id="@+id/timer_seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/help_test_setting_view"
                    android:inputType="number"
                    android:hint="@string/_00"
                    android:gravity="center"
                    android:maxLength="2"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>