<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences"
        android:hint="@string/new_question"
        android:textColorHint="@color/standartGray"
        android:textSize="20sp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:adjustViewBounds="true"
        android:contentDescription="@string/none_description"/>
    <LinearLayout
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">
            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_add_black_24dp"
                android:contentDescription="@string/none_description"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal">
            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_check_box_black_24dp"
                android:contentDescription="@string/none_description"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal">
            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_insert_photo_black_24dp"
                android:contentDescription="@string/none_description"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal">
            <ImageButton
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/ic_delete_black_24dp"
                android:contentDescription="@string/none_description"/>
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:hint="@string/scores"
        android:inputType="number"
        android:textColorHint="@color/standartGray"
        android:textSize="15sp"/>

</LinearLayout>